# RoniaKit

./: CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  VERSION
examples/simple/: CMakeLists.txt  CentralWidget.qml  GaugeFactory.qml  main.qml
examples/simple/Model/: GaugeFactory.qml  ViewModel.qml
examples/simple/View/: GaugesPreview.qml  SettingsControl.qml  SettingsWidget.qml
modules/Gauges/: CMakeLists.txt
modules/Gauges/qml/: CircularBasicGauge.qml  CircularGauge.qml  FuelGauge.qml  LevelGauge.qml  RoniaControl.qml
modules/Gauges/qml/Extra/: CircularAnalogGauge.qml  CircularModernGauge1.qml  CircularModernGauge2.qml  CircularSpeedGauge.qml
modules/Gauges/qml/Extra/Style/: CircularAnalogGaugeStyle.qml  CircularModernGauge1Style.qml  CircularModernGauge2Style.qml  CircularSpeedGaugeStyle.qml
modules/Gauges/qml/Style/: CircularBasicGaugeStyle.qml  CircularGaugeStyle.qml  FuelGaugeStyle.qml  LevelGaugeStyle.qml  RoniaControlStyle.qml
resources/Components/: AnalogGauge.qml  BasicCircularGauge.qml  CircularGauge.qml  CircularGaugeModern.qml  CircularGaugeSpeed.qml  CircularRangeControl.qml  LevelGauge.qml  ModernGauge2.qml  RKCircularGauge.qml  RKCircularGaugeModern.qml  RKCircularGaugeSpeed.qml  RKControl.qml  RangeControl.qml  RoniaCircularGauge.qml  RoniaControl.qml  RoniaGauge.qml  RoniaSimpleGauge.qml  RoniaSpeedGauge.qml  Thermometer.qml
resources/Components/Gauges/: CircularBasicGauge.qml  CircularGauge.qml  CircularRangeControl.qml  CircularThermometer.qml  FuelGauge.qml  HalfDial.qml  LevelGauge.qml  RangeControl.qml  RoniaControl.qml  Thermometer.qml
resources/Components/Gauges/Extra/: CircularAnalogGauge.qml  CircularModernGauge1.qml  CircularModernGauge2.qml  CircularSpeedGauge.qml
resources/Components/Gauges/Extra/Style/: CircularAnalogGaugeStyle.qml  CircularModernGauge1Style.qml  CircularModernGauge2Style.qml  CircularSpeedGaugeStyle.qml
resources/Components/Gauges/Style/: CircularBasicGaugeStyle.qml  CircularGaugeStyle.qml  CircularThermometerStyle.qml  FuelGaugeStyle.qml  LevelGaugeStyle.qml  RoniaControlStyle.qml  ThermometerStyle.qml
resources/Components/Style/: AnalogGaugeStyle.qml  BasicCircularGaugeStyle.qml  CircularGaugeModernStyle.qml  CircularGaugeSpeedStyle.qml  CircularGaugeStyle.qml  LevelGaugeStyle.qml  ModernGauge2Style.qml  RoniaControlStyle.qml
resources/Images/gauge/AnalougeGauge/: VoltageGauge.rar
test/: CMakeLists.txt
